docs/guides/using-lighthouse-dns/ValidateHostnameInput.module.css
.ValidateHostnameInput {
  font-size: var(--ifm-font-size-base);
  display: grid;
  gap: 1rem;
}

.ValidateHostnameInput_input {
  border-color: var(--ifm-color-content-secondary);
  border-radius: var(--ifm-global-radius);
  border-style: solid;
  border-width: var(--ifm-global-border-width);
  padding: 0.5rem;
}

.ValidateHostnameInput_info {
  color: var(--ifm-color-info);
  background-color: var(--ifm-color-info-contrast-background);
  border-radius: var(--ifm-global-radius);
  padding: 0.5rem;
  width: fit-content;
}

.ValidateHostnameInput_error {
  color: var(--ifm-color-danger);
  background-color: var(--ifm-color-danger-contrast-background);
  border-radius: var(--ifm-global-radius);
  padding: 0.5rem;
  width: fit-content;
}

.ValidateHostnameInput_success {
  color: var(--ifm-color-success);
  background-color: var(--ifm-color-success-contrast-background);
  border-radius: var(--ifm-global-radius);
  padding: 0.5rem;
  width: fit-content;
}

